Testfix - regression due to test JVM memory parameters
Signed-off-by: Marc-Antoine Gouillart <marsu_pilami@msn.com>